--- a/style.css
+++ b/style.css
@@ -270,17 +270,19 @@ footer{
     background-color: #C5C7C4;
     padding: 3em 2em;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 1em;
-    display: none;
-    
-    
+    grid-template-columns: repeat(2,1fr);
+    gap: 2em;
+    text-align: left;
 }
 
 footer ul{
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+.footer-item div{
+    text-align: left;
 }
 
 footer li{
