--- a/style.css
+++ b/style.css
@@ -520,13 +520,13 @@ main h2{
 
 
 .kaart{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     margin: 0 auto;
     width: 100%;    
     max-width: 15em;
-    padding-top: 5em;
+    border-radius: 1em;
     
 }
-
+.kaart-wrapper{
+    padding-top: 5em;
+}
