--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 nav{
     
-    display: block;
+    display: flex;
     position: relative;
     text-align: center;
     align-items: center;
@@ -32,6 +32,7 @@ nav{
    margin: 0 auto;
    align-items: center;
    
+   
 }
 
 .mainfaq{
@@ -44,8 +45,6 @@ nav{
     font-size: 1.2em;
     font-weight: 300;
     gap: 10em;
-    
-    
 }
 
 
@@ -140,6 +139,41 @@ nav{
     top: 6px;
 }
 
+@media(min-width:768px) {
+
+    .logo{
+        justify-content: flex-start;
+        margin: 0;
+        
+    }
+
+    
+    
+    .slideout {
+    position: static;
+    transform: none;
+    height: auto;
+    background: none;
+    padding: 0;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 2em;
+    padding-right: 1em;
+  }
+
+  /* Links horizontaal naast elkaar */
+  .slideout a {
+    color: black;
+    padding: 0;
+    margin: 0;
+    font-size: 1.1em;
+  }
+
+    .hamburger{
+        display: none;
+    }
+}
+
 
 
 /* HEADER*/
@@ -184,9 +218,7 @@ header p{
     font-size: 1.2em;
 }
 
-header h3{
-    margin-bottom: 2em;
-}
+
 .hero{
     width: 100%;
     padding-left: 0;
@@ -197,6 +229,12 @@ header h3{
    margin-top: -4em;
    transform: translateY(-1.3em);
    padding-top: 3em;
+}
+
+@media(min-width:768px) {
+    .hero{
+        transform: translateY(-0.9em);
+    }
 }
 
 /* SECTION 1*/
@@ -237,6 +275,20 @@ main{
     
 }
 
+@media(min-width:768px) {
+    .section1{
+        display: flex;
+        justify-content: center;
+        gap: 2em;
+    }
+}
+
+@media(min-width:1200px) {
+    .section1{
+        gap: 10em;
+    }
+}
+
 .article p{
     width: 100%;
     max-width: 10em;
@@ -246,6 +298,13 @@ main{
 
 .article {
     padding: 3em;
+}
+
+.features{
+    display: grid;
+  grid-template-columns: 1fr;
+  gap: 2em;
+  margin-top: 3em;
 }
 
 .section2{
@@ -263,6 +322,35 @@ main{
 .section2 h2{
     font-size: 2em;
     font-weight: 400;
+}
+
+@media (min-width:768px) {
+    .features{
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows:auto auto ;
+    }
+
+    .article:nth-child(1) {
+    grid-column: 1 / 3;
+    justify-self: center;
+  }
+
+  .article:nth-child(2) {
+    grid-column: 1;
+  }
+
+  .article:nth-child(3) {
+    grid-column: 2;
+  }
+}
+
+@media(min-width:1200px) {
+    .features {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: 0 auto;
+    }
 }
 
 .section3{
@@ -321,6 +409,19 @@ footer a img{
     height: 1.5em;
 }
 
+@media (min-width:768px) {
+    .wave{
+        margin-top: -10em;
+        margin-bottom: -7em;
+    }
+}
+
+@media (min-width:1200px) {
+    .wave{
+        margin-top: -18em;
+        margin-bottom: -10em;
+    }
+}
 
 /*FAQ*/
 
