--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ nav{
     padding: 0;
     margin: 0;
     font-size: 1.1em;
+    
   }
 
     .hamburger{
@@ -252,7 +253,7 @@ header p{
 }
 
 .btn{
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 
@@ -271,7 +272,7 @@ header p{
     }
 
     .btn{
-        font-size: 2em;
+        font-size:1.6em;
     }
 
     .hero{
@@ -282,6 +283,35 @@ header p{
         
         
     }
+     .slideout {
+        padding-right: 6em;
+        gap: 4em;
+        
+    }
+
+    
+}
+
+@media(min-width:1400px) {
+    .hero{
+        padding-left: 12em;
+    }
+
+    .slideout {
+        padding-right: 8em;
+        gap: 4em;
+        
+    }
+
+    .logo{
+        padding-left: 5em;
+    }
+
+    .indexsection1{
+        padding-left: 6em;
+    }
+
+  
 }
 /* SECTION 1*/
 
