--- a/style.css
+++ b/style.css
@@ -886,7 +886,7 @@ main h2{
     margin: 0 auto;
     width: 100%;
     justify-content: center;  
-    border-radius: 1em;
+    
     
 }
 .kaart-wrapper{
@@ -900,6 +900,11 @@ main h2{
         width: 100%;
         max-width: 50em;
         margin: 0 auto;
+  }
+
+  .kaart {
+    border-radius: 1em;
+    margin-bottom: 1em;
   }
 }
 
